--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="today">Today</string>
     <string name="seven_days">7 Days</string>
     <string name="settings">Settings</string>
+    <string name="ui">UI</string>
+    <string name="theme_preferences_key">theme_preferences_key</string>
+    <string name="notification_preferences_key"/>
+
+    <string name="dark_theme_preference_value">0</string>
+    <string name="light_theme_preference_value">1</string>
+    <string name="system_theme_preference_value">2</string>
+
+    <string name="dark_theme_description">Dark mode</string>
+    <string name="light_theme_description">Light mode</string>
+    <string name="system_theme_description">System default</string>
 </resources>
